Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-115856

Don't let qmllint warnings fail the build

    XMLWordPrintable

Details

    Description

      If the `all_qmllint` target is built, the build will be considered to have failed when a qmllint warning is encountered. One example consequence is that Qt Creator will not launch the startup application even if it is perfectly runnable.

      Suggestion: Don't treat qmllint warnings as a build failure by default. (Perhaps reserve that for the Error level, or support a qmllint equivalent of -Werror)

      Attachments

        Issue Links

          For Gerrit Dashboard: QTBUG-115856
          # Subject Branch Project Status CR V

          Activity

            People

              qtqmlteam Qt Qml Team User
              skoh-qt Sze Howe Koh
              Votes:
              2 Vote for this issue
              Watchers:
              5 Start watching this issue

              Dates

                Created:
                Updated:

                Gerrit Reviews

                  There is 1 open Gerrit change